# flash_card_maker

./: .gitignore  README.md  analyze_canny.py  analyze_grid.py  analyze_layout.py  analyze_visual.py  contour_extractor.py  contour_extractor_v3.py  debug_regions.py  pyproject.toml  requirements.txt  test_ocr_sam.py  test_v3_pairs.json  text_based_extractor.py  unified_extractor.py
.github/workflows/: smoke_no_ocr.yml
config/: default.json
docs/: DESIGN.md  output_contract.md  qa-gate.md  smoke_no_ocr.md  summary_2026-01-24.md  test_results_2026-01-24.md  test_results_2026-01-31.md
flashcard_engine/: __init__.py  __main__.py  builder.py  cleaner.py  cli.py  config.py  cropper.py  exporter.py  job.py  layout.py  learning.py  ocr.py  page_provider.py  pair_extractor.py  pair_flashcard_builder.py  panel_debug.py  pipeline.py  review.py  review_ui.py  review_ui_generator.py  sam_pair_extractor.py  segmenter.py  types.py  utils.py  validator.py  writer.py
flashcard_engine/exporters/: apkg.py
output_pairs/: pairs_20260124_103834.json  pairs_20260124_103837.json  pairs_20260124_103840.json  pairs_20260124_103845.json  pairs_20260124_103849.json  pairs_20260124_103853.json  pairs_20260124_103857.json  pairs_20260124_103909.json  pairs_20260124_103918.json
samples/smoke_no_ocr/: README.md  check_v03_idempotency.py  check_v04_review_ui_and_apkg.py  generate_image.py  review_feedback.edit_only.json  review_feedback.example.json
samples/smoke_no_ocr/stage/ocr/: page_000.cleaned.json
tests/: e2e_full_pipeline.py  e2e_pair_mode.py  test_sam_pipeline.py
